--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Data Persistence Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent"
+    "server": "nodemon index.js",
+    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
+    "rollback": "knew migrate:rollback",
+    "mup": "knex migrate:latest",
+    "mdown": "knex migrate:down",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -16,5 +21,10 @@
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.21.17",
+    "sqlite3": "^5.0.2"
   }
 }
