--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.17",
+    "nodemon": "^2.0.7",
     "sqlite3": "^5.0.2"
   }
 }
